--- a/imap-mag-config.yaml
+++ b/imap-mag-config.yaml
@@ -6,7 +6,7 @@
 # General application conifguration:
 work_folder: '.work'
 data_store:  'output/'
-packet_definition: 'xtce/tlm_20250804.xml'
+packet_definition: 'xtce/'
 
 # Command specific configuration:
 fetch_binary:
@@ -41,4 +41,3 @@ upload:
         - "*science/mag/l2/*"
         - "*science/mag/l2-pre/*"
         - "*hk/mag/l1/*"
-
