--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ pandas = "^2.2.2"
 imap-data-access = "^0.34.1"
 cdflib = "^1.3.6"
 psycopg = {extras = ["binary"], version = "^3.2.9"}
-prefect = {extras = ["shell"], version = "^3.1.7"}
+prefect = {extras = ["shell"], version = "3.4.17"}
 prefect-docker = "^0.6.3"
 spacepy = "^0.7.0"
 pydantic-settings = "^2.8.1"
