--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,8 @@ spacepy = "^0.7.0"
 pydantic-settings = "^2.8.1"
 ccsdspy = "^1.4.2"
 prefect-managedfiletransfer = "^0.2.0"
-pytest-env = "^1.1.5"
+pytest-env = "^1.1.5" # should this be a dev dependency?
+ialirt-data-access = "^0.5.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
