--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.14"
+python = ">=3.10,<3.14,!=3.11.0"
 pyyaml = "^6.0.3"
 typing-extensions = "^4.14.0"
 pydantic = "^2.10.2"
@@ -29,7 +29,7 @@ alembic = "^1.16.5"
 sqlalchemy-utils = "^0.42.0"
 requests = "^2.32.4"
 pandas = "^2.2.2"
-imap-data-access = "^0.34.1"
+imap-data-access = "^0.36.0"
 cdflib = "^1.3.6"
 psycopg = {extras = ["binary"], version = "^3.2.9"}
 prefect = {extras = ["shell"], version = "3.4.20"}
@@ -39,6 +39,10 @@ pydantic-settings = "^2.8.1"
 ccsdspy = "^1.4.2"
 prefect-managedfiletransfer = "^0.2.0"
 pytest-env = "^1.1.5"
+imap-processing = "^1.0.0"
+scalene = "^1.5.55"
+polars = "^1.34.0"
+pyarrow = "^21.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
