task: use YAML file to capture I-ALiRT conversions

--- a/imap-mag-config.yaml
+++ b/imap-mag-config.yaml
@@ -6,7 +6,7 @@
 # General application conifguration:
 work_folder: '.work'
 data_store:  'output/'
-packet_definition: 'xtce/'
+packet_definition: 'packet_def/'
 
 # Command specific configuration:
 fetch_binary:
