--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ docker = "^7.1.0"
 testcontainers = "^4.12.0"
 wiremock = "^2.7.0"
 pytest-xdist = "^3.8.0"
+diffimg = "^0.3.0"
 
 [tool.poetry.scripts]
 # can execute via poetry, e.g. `poetry run imap-mag hello world`
