feat!: start working on checking I-ALiRT data
WIP: not finished!

--- a/imap-mag-config.yaml
+++ b/imap-mag-config.yaml
@@ -9,6 +9,9 @@ data_store:  'output/'
 packet_definition: 'packet_def/'
 
 # Command specific configuration:
+check_ialirt:
+    work_sub_folder:
+
 fetch_binary:
     api:
         url_base: 'https://lasp.colorado.edu/ops/imap/poda/dap2/packets/SID2/'
