--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ ccsdspy = "^1.4.2"
 prefect-managedfiletransfer = "^0.2.0"
 pytest-env = "^1.1.5" # should this be a dev dependency?
 ialirt-data-access = "^0.5.0"
+apprise = ">=1.9.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
