--- a/imap-mag-config.yaml
+++ b/imap-mag-config.yaml
@@ -8,6 +8,10 @@ work_folder: '.work'
 data_store:  'output/'
 packet_definition: 'packet_def/'
 
+sdc: &sdc_creds
+    url_base: 'https://api.dev.imap-mission.com'
+    auth_code:
+
 # Command specific configuration:
 check_ialirt:
     work_sub_folder:
@@ -28,9 +32,14 @@ fetch_ialirt:
 
 fetch_science:
     api:
-        url_base: 'https://api.dev.imap-mission.com'
-        auth_code:
+        <<: *sdc_creds
     work_sub_folder:
+    publish_to_data_store: true
+
+fetch_spice:
+    api:
+        <<: *sdc_creds
+    work_sub_folder: spice
     publish_to_data_store: true
 
 plot_ialirt:
@@ -39,8 +48,7 @@ plot_ialirt:
 
 publish:
     api:
-        url_base: 'https://api.dev.imap-mission.com'
-        auth_code:
+        <<: *sdc_creds
     work_sub_folder:
 
 process:
