feat: spice downloads, and stored in datastore

--- a/defaults.env
+++ b/defaults.env
@@ -17,6 +17,7 @@ IMAP_USERID=5679
 # IMAP_WEBPODA_TOKEN=
 # IMAP_API_KEY=
 
+PREFECT_LOGGING_ROOT_LEVEL=DEBUG
 PREFECT_LOGGING_LEVEL=DEBUG
 PREFECT_SERVER_LOGGING_LEVEL=DEBUG
 PREFECT_INTERNAL_LOGGING_LEVEL=DEBUG
