--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ repos:
       - id: trailing-whitespace
       - id: pretty-format-json
         args: [--autofix, --indent, "4"]
-        exclude: .devcontainer/devcontainer.json|.vscode/settings.json|.vscode/tasks.json
+        exclude: .devcontainer/devcontainer.json|.vscode/settings.json|.vscode/tasks.json|.vscode/launch.json
   - repo: https://github.com/Lucas-C/pre-commit-hooks
     rev: v1.5.5
     hooks:
