--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
 requires-python = ">=3.10"
 name = "imap-mag"
-version = "4.7.0"
+version = "4.8.0"
 
 [tool.poetry]
 name = "imap-mag"
-version = "4.7.0"
+version = "4.8.0"
 description = "Process IMAP data"
 authors = ["alastairtree"]
 readme = "README.md"
@@ -41,6 +41,7 @@ prefect-managedfiletransfer = "^0.2.0"
 pytest-env = "^1.1.5" # should this be a dev dependency?
 ialirt-data-access = "^0.5.0"
 apprise = ">=1.9.5"
+spiceypy = "^8.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
