--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -37,7 +37,7 @@ jobs:
   test_on_windows:
     strategy:
       matrix:
-        python-versions: ["3.10", "3.11", "3.12"]
+        python-versions: ["3.12", "3.14"]
         os: [windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
