--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 name = "imap-mag"
 version = "4.6.4"
 
@@ -16,14 +16,14 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.14"
+python = ">=3.11,<3.15"
 pyyaml = "^6.0.3"
 typing-extensions = "^4.15.0"
 pydantic = "^2.11.10"
 space-packet-parser = "^5.0.1"
 xarray = "^2025.6.1"
 numpy = "^2.2.6"
-typer = "^0.15.4"
+typer = ">=0.16.0,<0.20.0"
 sqlalchemy = "^2.0.45"
 alembic = "^1.17.2"
 sqlalchemy-utils = "^0.42.0"
@@ -32,7 +32,7 @@ pandas = "^2.2.2"
 imap-data-access = "^0.34.1"
 cdflib = "^1.3.6"
 psycopg = {extras = ["binary"], version = "^3.2.9"}
-prefect = {extras = ["shell"], version = "3.4.24"}
+prefect = {extras = ["shell"], version = "3.6.9"}
 prefect-docker = "^0.6.6"
 spacepy = "^0.7.0"
 pydantic-settings = "^2.8.1"
