--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,8 @@ prefect-managedfiletransfer = "^0.2.0"
 pytest-env = "^1.1.5" # should this be a dev dependency?
 ialirt-data-access = "^0.5.0"
 apprise = ">=1.9.5"
+urllib3 = "^2.6.1"
+starlette = "^0.50.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^9.0.2"
