--- a/imap-mag-config.yaml
+++ b/imap-mag-config.yaml
@@ -63,7 +63,13 @@ upload:
 
 postgres_upload:
     crump_config_path: imap-db-injest-config.yaml
-    database_url_env_var_or_block_name: 'DATABASE_URL'
+    database_url_env_var_or_block_name: 'imap-database'
     enable_history: true
     paths_to_match:
-        - "*hk/mag/l1/*"
+        - "*hk/mag/l1/hsk-pw/*"
+        - "*hk/mag/l1/hsk-sci/*"
+        - "*hk/mag/l1/hsk-procstat/*"
+        - "*hk/mag/l1/hsk-sid15/*"
+        - "*hk/mag/l1/hsk-status/*"
+        - "*hk/sc/l1/x285/*"
+        - "*hk/sc/l1/x286/*"
