--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,13 +32,13 @@ pandas = "^2.2.2"
 imap-data-access = "^0.34.1"
 cdflib = "^1.3.6"
 psycopg = {extras = ["binary"], version = "^3.2.9"}
-prefect = {extras = ["shell"], version = "3.6.9"}
-prefect-docker = "^0.6.6"
+prefect = {extras = ["shell"], version = "3.6.11"}
+prefect-docker = "0.7.1"
 spacepy = "^0.7.0"
 pydantic-settings = "^2.8.1"
 ccsdspy = "^1.4.2"
 crump = "^0.2.0"
-prefect-managedfiletransfer = "^0.2.0"
+prefect-managedfiletransfer = "^0.4.0"
 
 ialirt-data-access = "^0.5.0"
 apprise = ">=1.9.5"
