build: Update pre-commit and devcontainer versions

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,7 +3,7 @@
 # see https://github.com/devcontainers/images/blob/main/src/python/.devcontainer/Dockerfile
 
 ## we start with the version we want as the system version
-FROM mcr.microsoft.com/devcontainers/python:3.13-bullseye
+FROM mcr.microsoft.com/devcontainers/python:3.14-bookworm
 
 # install uv from the UV image
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
