--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,16 +20,16 @@ python = ">=3.11,<3.15"
 pyyaml = "^6.0.3"
 typing-extensions = "^4.15.0"
 pydantic = "^2.11.10"
-space-packet-parser = "^5.0.1"
+space-packet-parser = "^6.1.0"
 xarray = "^2025.6.1"
-numpy = "^2.2.6"
+numpy = "^2.4.1"
 typer = ">=0.16.0,<0.20.0"
 sqlalchemy = "^2.0.45"
 alembic = "^1.17.2"
 sqlalchemy-utils = "^0.42.0"
 requests = "^2.32.4"
 pandas = "^2.2.2"
-imap-data-access = "^0.34.1"
+imap-data-access = "^0.37.1"
 cdflib = "^1.3.6"
 psycopg = {extras = ["binary"], version = "^3.2.9"}
 prefect = {extras = ["shell"], version = "3.6.11"}
@@ -39,7 +39,6 @@ pydantic-settings = "^2.8.1"
 ccsdspy = "^1.4.2"
 crump = "^0.2.0"
 prefect-managedfiletransfer = "^0.4.1"
-
 ialirt-data-access = "^0.5.0"
 apprise = ">=1.9.5"
 prefect-sqlalchemy = "^0.5.3"
@@ -57,6 +56,8 @@ testcontainers = "^4.13.2"
 wiremock = "^2.7.0"
 pytest-xdist = "^3.8.0"
 diffimg = "^0.3.0"
+openpyxl = "^3.1.5"
+imap-processing = "^1.0.16"
 
 [tool.poetry.scripts]
 # can execute via poetry, e.g. `poetry run imap-mag hello world`
